--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.1.0"
@@ -33,7 +35,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
