--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
+    "vue-multiselect": "^2.1.6",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
