--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.10",
+    "v-mask": "^2.0.2",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.0"
+    "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
