--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.10",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.1.1"
   },
