--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "v-mask": "^2.0.2",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.10",
+    "vue-flux": "^6.0.0-beta.28",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vue2-google-maps": "^0.10.7",
